Changed the timer background colour

--- a/temp.html
+++ b/temp.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: #000000">
   <p>
-    <fieldset name="timer" id="timer" style="background-color:#FFEBCD">
+    <fieldset name="timer" id="timer" style="background-color:#050504" >
       <legend style="background-color: #FF8C00; color: white; padding: 5px 10px; border: solid; border-color: black">Time</legend>
       <p id="time"></p>
     </fieldset>
